samples/erase/out.txt
samples\erase\bad.cpp:9:32: error: Using iterator to local container 'items' that may be invalid. [invalidContainer]
    for (iter = items.begin(); iter != items.end(); ++iter) {
                               ^
samples\erase\bad.cpp:9:17: note: Iterator to container is created here.
    for (iter = items.begin(); iter != items.end(); ++iter) {
                ^
samples\erase\bad.cpp:10:19: note: Assuming condition is true.
        if (*iter == 2) {
                  ^
samples\erase\bad.cpp:10:19: note: Assuming condition is true.
        if (*iter == 2) {
                  ^
samples\erase\bad.cpp:9:37: note: Assuming condition is true.
    for (iter = items.begin(); iter != items.end(); ++iter) {
                                    ^
samples\erase\bad.cpp:11:13: note: After calling 'erase', iterators or references to the container's data may be invalid .
            items.erase(iter);
            ^
samples\erase\bad.cpp:4:22: note: Variable created here.
    std::vector<int> items;
                     ^
samples\erase\bad.cpp:9:32: note: Using iterator to local container 'items' that may be invalid.
    for (iter = items.begin(); iter != items.end(); ++iter) {
                               ^
